fix: update CallToAction34 layout and spacing

--- a/editor-components/call_to_action/call_to_action34/call_to_action34.module.scss
+++ b/editor-components/call_to_action/call_to_action34/call_to_action34.module.scss
@@ -19,7 +19,7 @@
 
                 .right-column {
                     width: 100%;
-                    max-height: 55vh;
+                    min-height: 55vh;
                 }
 
                 &.colored {
@@ -72,7 +72,6 @@
                 flex-direction: column;
                 justify-content: center;
                 align-items: flex-start;
-                gap: var(--composer-gap-md);
 
                 .title,
                 .subtitle,
